Bug 508986 - XSMP session restore doesn't work. r=bsmedberg, r=dietrich